--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>DevRay</title>
   </head>
   <body>
+    <header></header>
     <h1>Raymond Mojica</h1>
+    <a href="contact.html">Contact</a>
+    <footer></footer>
   </body>
 </html>
